# sumcheck-mle

./: Cargo.toml  README.md
benches/: sc_bench.rs
src/: lib.rs  sumcheck.rs  sumcheck_naive.rs
src/sumcheck_ml/: main.rs  mod.rs  poly.rs  prover.rs  test.rs  verifier.rs
src/sumcheck_pml/: main.rs  mod.rs  poly.rs  prover.rs  test.rs  verifier.rs
