[package]
name = "sum-check"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sc"
path = "src/sumcheck.rs"

[[bin]]
name = "ml"
path = "src/sumcheck_ml/main.rs"

[[bin]]
name = "pml"
path = "src/sumcheck_pml/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4" 
bitvec = "1.0.0"
polynomial = "0.2.5"
thiserror = "1.0.31"
