[package]
name = "sumcheck_mle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sc"
path = "src/sumcheck_naive.rs"

[[bench]]
name = "sc_bench"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4" 
bitvec = "1.0.0"
criterion = "0.5.1"
polynomial = "0.2.5"
thiserror = "1.0.31"
